--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.4",
     "lucide-react": "^0.390.0",
+    "mockjs": "^1.1.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
