--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@rushstack/eslint-patch": "^1.10.4",
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -22,7 +23,7 @@
     "ioredis": "^5.4.1",
     "lucide-react": "^0.390.0",
     "mockjs": "^1.1.0",
-    "next": "14.2.3",
+    "next": "^14.2.7",
     "node-fetch": "^3.3.2",
     "node-rsa": "^1.1.1",
     "react": "^18",
