--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@rushstack/eslint-patch": "^1.10.4",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -38,11 +39,11 @@
     "@types/react-dom": "^18",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8",
+    "postcss": "^8.4.44",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
-  "eslintConfig":{
-    "extends":"next/core-web-vitals"
+  "eslintConfig": {
+    "extends": "next/core-web-vitals"
   }
 }
