--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.4",
+    "install": "^0.13.0",
     "ioredis": "^5.4.1",
     "lucide-react": "^0.390.0",
     "mockjs": "^1.1.0",
     "next": "^14.2.7",
     "node-fetch": "^3.3.2",
     "node-rsa": "^1.1.1",
+    "npm": "^10.8.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-player": "^2.16.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
