--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@logto/next": "^3.6.0",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@rushstack/eslint-patch": "^1.10.4",
+    "@silverhand/essentials": "^2.9.1",
+    "antd": "^5.20.6",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
@@ -23,9 +26,10 @@
     "embla-carousel-react": "^8.1.4",
     "install": "^0.13.0",
     "ioredis": "^5.4.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.390.0",
     "mockjs": "^1.1.0",
-    "next": "^14.2.7",
+    "next": "^14.2.13",
     "node-fetch": "^3.3.2",
     "node-rsa": "^1.1.1",
     "npm": "^10.8.3",
@@ -40,7 +44,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.44",
     "tailwindcss": "^3.4.1",
