--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dequal": "^2.0.3",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.4",
     "install": "^0.13.0",
     "ioredis": "^5.4.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.390.0",
-    "mockjs": "^1.1.0",
     "next": "^14.2.13",
+    "nextjs": "^0.0.3",
     "node-fetch": "^3.3.2",
     "node-rsa": "^1.1.1",
     "npm": "^10.8.3",
@@ -41,14 +42,20 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.11.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.3",
+    "debug": "^4.3.7",
+    "eslint": "^9.11.0",
+    "eslint-config-next": "^14.2.13",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-react": "^7.36.1",
+    "globals": "^15.9.0",
     "postcss": "^8.4.44",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.6.0"
   },
   "eslintConfig": {
     "extends": "next/core-web-vitals"
