--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "embla-carousel-react": "^8.3.0",
     "install": "^0.13.0",
     "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.445.0",
     "next": "^14.2.13",
