--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@logto/next": "^3.6.1",
+    "@logto/next": "^3.6.0",
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@rushstack/eslint-patch": "^1.10.4",
     "@silverhand/essentials": "^2.9.1",
+    "@types/node-forge": "^1.3.11",
     "antd": "^5.21.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
@@ -35,6 +36,7 @@
     "next": "^14.2.13",
     "nextjs": "^0.0.3",
     "node-fetch": "^3.3.2",
+    "node-forge": "^1.3.1",
     "node-rsa": "^1.1.1",
     "npm": "^10.8.3",
     "react": "^18.3.1",
