--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "embla-carousel-react": "^8.3.0",
     "install": "^0.13.0",
     "ioredis": "^5.4.1",
+    "javascript-obfuscator": "^4.1.1",
     "jsencrypt": "^3.3.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
@@ -44,7 +45,8 @@
     "react-player": "^2.16.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "terser-webpack-plugin": "^5.3.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.0",
@@ -62,7 +64,8 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "typescript": "^5",
-    "typescript-eslint": "^8.6.0"
+    "typescript-eslint": "^8.6.0",
+    "webpack-obfuscator": "^3.5.1"
   },
   "eslintConfig": {
     "extends": "next/core-web-vitals"
