--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@logto/next": "^3.6.0",
+    "@logto/next": "^4.2.2",
+    "@logto/node": "^3.1.3",
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -18,9 +19,11 @@
     "@rushstack/eslint-patch": "^1.10.4",
     "@silverhand/essentials": "^2.9.1",
     "@types/node-forge": "^1.3.11",
+    "add": "^2.0.6",
     "antd": "^5.21.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "bun": "^1.2.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "concat-map": "^0.0.2",
