--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@logto/next": "^4.2.2",
     "@logto/node": "^3.1.3",
-    "@lottiefiles/react-lottie-player": "^3.5.4",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -24,12 +25,14 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "bun": "^1.2.9",
+    "caniuse-lite": "^1.0.30001749",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "concat-map": "^0.0.2",
     "dequal": "^2.0.3",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.3.0",
+    "gsap": "^3.13.0",
     "install": "^0.13.0",
     "ioredis": "^5.4.1",
     "javascript-obfuscator": "^4.1.1",
