--- a/package.json
+++ b/package.json
@@ -61,8 +61,9 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "anime": ".",
     "debug": "^4.3.7",
-    "eslint": "8.57.1",
+    "eslint": "^9.38.0",
     "eslint-config-next": "^14.2.13",
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-react": "^7.36.1",
