--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --webpack",
+    "build": "next build --webpack",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
@@ -23,8 +23,8 @@
     "add": "^2.0.6",
     "antd": "^5.21.0",
     "autoprefixer": "^10.4.20",
-    "axios": "^1.7.7",
-    "bun": "^1.2.9",
+    "axios": "1.12.0",
+    "bun": "1.2.23",
     "caniuse-lite": "^1.0.30001749",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -40,14 +40,14 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.445.0",
-    "next": "^14.2.13",
+    "next": "16.0.1",
     "nextjs": "^0.0.3",
     "node-fetch": "^3.3.2",
     "node-forge": "^1.3.1",
     "node-rsa": "^1.1.1",
     "npm": "^10.8.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-player": "^2.16.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
@@ -59,12 +59,12 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.9",
     "@types/node": "^22",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
     "anime": ".",
     "debug": "^4.3.7",
     "eslint": "^9.38.0",
-    "eslint-config-next": "^14.2.13",
+    "eslint-config-next": "16.0.1",
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-react": "^7.36.1",
     "globals": "^15.9.0",
@@ -76,5 +76,9 @@
   },
   "eslintConfig": {
     "extends": "next/core-web-vitals"
+  },
+  "overrides": {
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2"
   }
 }
