--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,30 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-.yarn/install-state.gz
-.env.local
-.env.development.local
-# testing
-/coverage
-.env
-# next.js
-/.next/
-/out/
-bun.lockb
-# production
-/build
-.env.production
 .idea
+.idea/**
+*.iml
+out/
+out/**
+/build/
+/build/**
+.gradle
+.gradle/**
 .next
-.idea/*
-*.xml
-# misc
+.next/**
+.env
+.env.local
+.env.*.local
 .DS_Store
-*.pem
-
-# debug
+node_modules/
+node_modules/**
+dist/
+dist/**
+.vscode/
+.vscode/**
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-.idea
-.idea/*
-.idea/.gitkeep
-
-.vscode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-
-# next.js
-.next
-.next/*
-
-# local env files
-.env*.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+.pnpm-debug.log*
+coverage/
+coverage/**
+logs/
+logs/**
+*.log
