--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "antd": "^5.21.0",
     "autoprefixer": "^10.4.20",
     "axios": "1.12.0",
+    "babel-plugin-react-compiler": "^1.0.0",
     "bun": "1.2.23",
     "caniuse-lite": "^1.0.30001749",
     "class-variance-authority": "^0.7.0",
