--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --webpack",
-    "build": "next build --webpack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint ."
   },
@@ -52,8 +52,7 @@
     "react-player": "^2.16.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "terser-webpack-plugin": "^5.3.10"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.0",
@@ -72,8 +71,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "typescript": "^5",
-    "typescript-eslint": "^8.6.0",
-    "webpack-obfuscator": "^3.5.1"
+    "typescript-eslint": "^8.6.0"
   },
   "eslintConfig": {
     "extends": "next/core-web-vitals"
