--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@rushstack/eslint-patch": "^1.10.4",
     "@silverhand/essentials": "^2.9.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/node-forge": "^1.3.11",
     "add": "^2.0.6",
     "antd": "^5.27.6",
@@ -37,6 +38,7 @@
     "install": "^0.13.0",
     "ioredis": "^5.4.1",
     "javascript-obfuscator": "^4.1.1",
+    "js-cookie": "^3.0.5",
     "jsencrypt": "^3.3.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
