--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/node-forge": "^1.3.11",
     "add": "^2.0.6",
     "antd": "^5.27.6",
+    "artplayer": "^5.3.0",
+    "artplayer-plugin-danmuku": "^5.2.0",
     "autoprefixer": "^10.4.20",
     "axios": "1.12.0",
     "babel-plugin-react-compiler": "^1.0.0",
@@ -35,6 +37,7 @@
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.3.0",
     "gsap": "^3.13.0",
+    "hls.js": "^1.6.15",
     "install": "^0.13.0",
     "ioredis": "^5.4.1",
     "javascript-obfuscator": "^4.1.1",
