--- a/package.json
+++ b/package.json
@@ -46,14 +46,14 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.445.0",
-    "next": "16.0.1",
+    "next": "^16.1.6",
     "nextjs": "^0.0.3",
     "node-fetch": "^3.3.2",
     "node-forge": "^1.3.1",
     "node-rsa": "^1.1.1",
-    "npm": "^10.8.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "npm": "^11.9.0",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
     "react-player": "^2.16.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
@@ -64,12 +64,12 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.9",
     "@types/node": "^22",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
+    "@types/react": "19.2.13",
+    "@types/react-dom": "19.2.3",
     "anime": ".",
     "debug": "^4.3.7",
     "eslint": "^9.38.0",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "16.0.11",
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-react": "^7.36.1",
     "globals": "^15.9.0",
@@ -82,7 +82,7 @@
     "extends": "next/core-web-vitals"
   },
   "overrides": {
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2"
+    "@types/react": "19.2.13",
+    "@types/react-dom": "19.2.3"
   }
 }
