--- a/package.json
+++ b/package.json
@@ -4,79 +4,80 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "bun i baseline-browser-mapping@latest -D && next build",
     "start": "next start",
     "lint": "eslint ."
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
-    "@logto/next": "^4.2.2",
-    "@logto/node": "^3.1.3",
+    "@logto/next": "^4.2.8",
+    "@logto/node": "^3.1.8",
     "@lottiefiles/react-lottie-player": "^3.6.0",
-    "@radix-ui/react-avatar": "^1.1.0",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@rushstack/eslint-patch": "^1.10.4",
-    "@silverhand/essentials": "^2.9.1",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@rushstack/eslint-patch": "^1.15.0",
+    "@silverhand/essentials": "^2.9.2",
     "@types/js-cookie": "^3.0.6",
-    "@types/node-forge": "^1.3.11",
+    "@types/node-forge": "^1.3.14",
     "add": "^2.0.6",
-    "antd": "^5.27.6",
+    "antd": "^5.29.3",
     "artplayer": "^5.3.0",
     "artplayer-plugin-danmuku": "^5.2.0",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.24",
     "axios": "1.12.0",
     "babel-plugin-react-compiler": "^1.0.0",
     "bun": "1.2.23",
-    "caniuse-lite": "^1.0.30001749",
-    "class-variance-authority": "^0.7.0",
+    "caniuse-lite": "^1.0.30001769",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "concat-map": "^0.0.2",
     "dequal": "^2.0.3",
-    "dotenv": "^16.4.5",
-    "embla-carousel-react": "^8.3.0",
-    "gsap": "^3.13.0",
+    "dotenv": "^16.6.1",
+    "embla-carousel-react": "^8.6.0",
+    "gsap": "^3.14.2",
     "hls.js": "^1.6.15",
     "install": "^0.13.0",
-    "ioredis": "^5.4.1",
-    "javascript-obfuscator": "^4.1.1",
+    "ioredis": "^5.9.2",
+    "javascript-obfuscator": "^4.2.2",
     "js-cookie": "^3.0.5",
-    "jsencrypt": "^3.3.2",
-    "jsonwebtoken": "^9.0.2",
-    "lodash": "^4.17.21",
+    "jsencrypt": "^3.5.4",
+    "jsonwebtoken": "^9.0.3",
+    "lodash": "^4.17.23",
     "lucide-react": "^0.445.0",
     "next": "^16.1.6",
     "nextjs": "^0.0.3",
     "node-fetch": "^3.3.2",
-    "node-forge": "^1.3.1",
+    "node-forge": "^1.3.3",
     "node-rsa": "^1.1.1",
     "npm": "^11.9.0",
     "react": "19.2.4",
     "react-dom": "19.2.4",
-    "react-player": "^2.16.0",
-    "swr": "^2.2.5",
-    "tailwind-merge": "^2.5.2",
+    "react-player": "^2.16.1",
+    "swr": "^2.4.0",
+    "tailwind-merge": "^2.6.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@eslint/js": "^9.11.0",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/lodash": "^4.17.9",
-    "@types/node": "^22",
+    "@eslint/js": "^9.39.2",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/lodash": "^4.17.23",
+    "@types/node": "^22.19.9",
     "@types/react": "19.2.13",
     "@types/react-dom": "19.2.3",
     "anime": ".",
-    "debug": "^4.3.7",
-    "eslint": "^9.38.0",
+    "baseline-browser-mapping": "^2.9.19",
+    "debug": "^4.4.3",
+    "eslint": "^9.39.2",
     "eslint-config-next": "16.0.11",
-    "eslint-plugin-jsx-a11y": "^6.10.0",
-    "eslint-plugin-react": "^7.36.1",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5",
-    "typescript-eslint": "^8.6.0"
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^15.15.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.54.0"
   },
   "eslintConfig": {
     "extends": "next/core-web-vitals"
