--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
-    "@logto/next": "^4.2.8",
-    "@logto/node": "^3.1.8",
+    "@logto/next": "4.2.2",
+    "@logto/node": "3.1.3",
     "@lottiefiles/react-lottie-player": "^3.6.0",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
